fixed how to play overflow

--- a/services/app/src/assets/base.scss
+++ b/services/app/src/assets/base.scss
@@ -11,3 +11,16 @@ html, body, #app {
 html {
   @apply bg-neutral-900 text-neutral-100;
 }
+
+::-webkit-scrollbar {
+  @apply w-1;
+}
+::-webkit-scrollbar-track {
+  @apply bg-neutral-700 rounded;
+}
+::-webkit-scrollbar-thumb {
+  @apply bg-neutral-400 rounded;
+}
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-neutral-500;
+}
